Further adjust grays, fix expand/collapse sizing.
(omeka/omeka-s#2394)

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -23,7 +23,7 @@
 /* @group ----- Generic styles ----- */
 
 :root {
-    --gray:#f7f7f7;
+    --gray:#eee;
     --white: var(--white);
     --black: #000;
     --border-color: #ccc;
@@ -877,6 +877,14 @@ nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
 
 /* @group ----- Content ----- */
 
+.expand,
+.collapse {
+    min-width: $spacing-unit;
+    min-height: $spacing-unit;
+    display: inline-block;
+    text-align: center;
+}
+
 .expand:after,
 .collapse:after {
     font-family: "Font Awesome 5 Free";
@@ -897,10 +905,10 @@ nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
 
 .collapse + .collapsible {
     display: block;
-    padding-left: $spacing-unit;
-    margin: $spacing-unit 0;
+    padding-left: .5 * $spacing-unit;
+    margin: (.5 * $spacing-unit) 0 0;
     width: 100%;
-    border-left: 1px solid var(--gray);
+    border-left: 3px solid var(--gray);
 
     h4 {
         font-size: $base-font-size;
@@ -914,7 +922,7 @@ nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
     &:last-child {
         margin-bottom: 0;
     }
-
+g
     dt {
         margin-bottom: 0;
         font-weight: bold;
@@ -987,7 +995,7 @@ nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
 
   .resource {
     display: flow-root;
-    border-top:1px solid var(--gray);
+    border-top:1px solid var(--border-color);
     padding: $spacing-unit 0;
   }
 
@@ -1361,7 +1369,7 @@ input[type="button"],
 }
 
 .faceted-browse-page .tablesaw td {
-    border-color: var(--gray);
+    border-color: var(--border-color);
 }
 
 .faceted-browse-page button .close-glyph {
